--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "./Backend/server.js",
   "scripts": {
-    "start": "npx nodemon server.js"
+    "start": "npx nodemon server.js",
+    "swagger": "node ./swagger.js"
+
   },
   "author": "SK",
   "type": "module",
@@ -21,6 +23,10 @@
     "lucide-react": "^0.509.0",
     "mongoose": "^8.9.5",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
