--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "npx nodemon server.js",
     "swagger": "node ./swagger.js"
-
   },
   "author": "SK",
   "type": "module",
@@ -24,6 +23,8 @@
     "mongoose": "^8.9.5",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.1.1",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
